[gd_scene load_steps=6 format=2]

[ext_resource path="res://Game/Objects/GameObjects/MazeSpawners/MazePlayerSpawner/MazePlayerSpawner.gd" type="Script" id=1]
[ext_resource path="res://Game/Objects/GameObjects/GunSpawner/GunSpawner.tscn" type="PackedScene" id=2]

[sub_resource type="BoxShape" id=1]
resource_local_to_scene = true
extents = Vector3( 1, 0.1, 1 )

[sub_resource type="SpatialMaterial" id=2]
flags_transparent = true
albedo_color = Color( 0.141176, 0.34902, 0.67451, 0.521569 )

[sub_resource type="CubeMesh" id=3]
material = SubResource( 2 )
size = Vector3( 2, 0.1, 2 )

[node name="MazePlayerSpawner" type="Spatial"]
script = ExtResource( 1 )

[node name="Position" type="Position3D" parent="."]

[node name="SpawnArea" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="SpawnArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, 0 )
shape = SubResource( 1 )

[node name="DebugMesh" type="MeshInstance" parent="SpawnArea/CollisionShape"]
transform = Transform( 0.9, 0, 0, 0, 1, 0, 0, 0, 0.9, 0, 0, 0 )
mesh = SubResource( 3 )
material/0 = null

[node name="GunSpawner" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 0, -3 )

[node name="GunSpawner2" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 0, 3 )

[node name="GunSpawner3" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 0, 3 )

[node name="GunSpawner4" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 0, -3 )

[node name="CamPosition" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 9, 0 )
